# lean-workspace

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONSOLIDATION_PLAN.md  FAST_PLAN.md  NODE_EDITOR_PLAN.md  OPTIMIZATION_PLAN.md  PARSER_INVENTORY.md  PLAN-staple-json.md  README.md  SINK_PLAN.md  TEST_INVENTORY.md  TerminusWidgets.md  WorkspaceSmoke.lean  justfile  lake-manifest.json  lakefile.lean  ledger.jsonl
.claude/agents/: collimator-refactor.md
.claude/commands/: build.md  close-issue.md  deps.md  docgen.md  issue.md  issues.md  new-issue.md  progress.md  rebuild.md  status.md  test.md  trace.md  unpushed.md
.issues/: 0001-environment-variable-support-for-flags.md  0001-test-issue-for-tracker.md  0002-another-important-task.md  0002-multi-value-flag-support.md  0003-low-priority-cleanup.md  0003-repl-support.md  0004-fix-float-parsing-in-fromarg.md  0004-switch-lakefile-to-local-requires-for-de.md  0005-declarative-validation.md  0005-implement-create-issue-form-in-tui.md  0006-automatic-program-name-detection.md  0006-implement-edit-issue-form-in-tui.md  0007-add-progress-note-from-tui.md  0007-remove-partial-annotation-from-parseall.md  0008-set-issue-status-to-in-progress-from-tui.md  0008-type-safe-argument-extraction.md  0009-interactive-prompts.md  0009-text-searchfilter-in-tui.md  0010-configuration-file-support.md  0010-scrolling-in-detail-view.md  0011-flag-groups-and-mutual-exclusion.md  0011-sorting-options-in-tui.md  0012-negatable-boolean-flags.md  0012-priority-filter-in-tui.md  0013-colored-help-output.md  0013-help-overlay-in-tui.md  0014-flag-value-completion-hints.md  0014-jump-to-issue-by-id-in-tui.md  0015-fluent-command-builder.md  0015-vim-style-navigation-motions.md  0016-confirmation-dialogs-in-tui.md  0016-short-flag-value-parsing.md  0017-improved-choice-validation.md  0017-label-filter-in-tui.md  0018-mouse-support-in-tui.md  0018-parsedvalues-efficiency.md  0019-assignee-filter-in-tui.md  0019-inconsistent-naming-conventions.md  0020-add-borders-around-form-fields-in-tui.md  0020-missing-documentation-comments.md  (+767 more)
apps/agent-mail/: .gitignore  AgentMail.lean  AgentMailTests.lean  README.md  ROADMAP.md
apps/ask/: .gitignore  Ask.lean  CLAUDE.md  Main.lean  README.md  ROADMAP.md  install.sh
apps/blockfall/: Blockfall.lean  BlockfallTests.lean  LICENSE  Main.lean  README.md  ROADMAP.md  Tests.lean
apps/cairn/: AGENTS.md  CLAUDE.md  Cairn.lean  CairnTests.lean  Main.lean  README.md  ROADMAP.md  build.sh  run.sh  test.sh
apps/chatline/: README.md  Uchatline.lean  UchatlineTests.lean
apps/enchiridion/: Enchiridion.lean  EnchiridionTests.lean  LICENSE  Main.lean  README.md  ROADMAP.md  Tests.lean
network/legate/ffi/: CMakeLists.txt
network/legate/ffi/include/: legate_ffi.h
network/legate/ffi/src/: legate_ffi.cpp
scripts/: build-native-libs.sh  codex-issue-swarm.sh  count-lean-lines.sh  find-long-files.sh  generate-local-overrides.sh  git-add-commit-push.sh  git-commit-all.sh  git-push-all.sh  git-status.sh  kill-lake.sh  lake-update.sh  loc.sh  release-all.sh  remove-local-overrides.sh  test-all.sh  test-entrypoints.txt
(+2581 files in other folders)
